apps/webhook_router/src/adapters/snapshots/webhook_router__adapters__wecom__tests__adapters_wecom_ingress_markdown.snap
---
source: apps/webhook_router/src/adapters/wecom.rs
expression: "json!({\n    \"id\": event.id, \"source\": event.source, \"timestamp\": event.timestamp,\n    \"title\": event.title, \"markdown\": event.markdown, \"meta\": event.meta,\n    \"raw\": event.raw,\n})"
---
id: wx-1
markdown: hi
meta:
  mentioned_list: ~
  msgtype: markdown
raw:
  create_time: 1700000000
  markdown:
    content: hi
  msgid: wx-1
  msgtype: markdown
source: wecom
timestamp: 1700000000
title: ~
