apps/webhook_router/src/adapters/snapshots/webhook_router__adapters__wecom__tests__adapters_wecom_uem_to_egress.snap
---
source: apps/webhook_router/src/adapters/wecom.rs
expression: "json!({ \"content_type\": payload.content_type, \"body\": payload.body, })"
---
body:
  markdown:
    content: hello
  msgtype: markdown
content_type: application/json
