apps/webhook_router/src/adapters/snapshots/webhook_router__adapters__wecom__tests__adapters_wecom_uem_to_egress_with_title.snap
---
source: apps/webhook_router/src/adapters/wecom.rs
expression: "json!({ \"content_type\": payload.content_type, \"body\": payload.body, })"
---
body:
  markdown:
    content: "# My Title\n\nhello"
  msgtype: markdown
content_type: application/json
